--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -67,6 +67,11 @@ shared_params:
       - policy: "random"
         group_level: True
         use_prior: False
+      - policy: "random"
+        group_level: True
+        use_prior: True  # We will evaluate the learnt policy of IntCEMs!
+        include_run_names:
+          - ".*(IntCEM).*"
 
   # Representation metrics
   # Change to False if you want representation metrics to be included in the
