--- a/experiments/configs/mixcem_siim_arc.yaml
+++ b/experiments/configs/mixcem_siim_arc.yaml
@@ -221,15 +221,15 @@ runs:
     hidden_dim: [16, 32]
     class_hidden_dim: [64, 128]
     intervention_prob: 0.5
-    gradient_clip_val: 2.0
-    max_concept_epochs: 20
-    warmup_epochs: 5
-    max_task_epochs: 30
+    # gradient_clip_val: 2.0
+    max_concept_epochs: 50 #20
+    warmup_epochs: 20 #5
+    max_task_epochs: 50 #30
     vib_beta: 0.00005
     concept_loss_weight: 1
     learning_rate: 0.001
     lr_ratio: 10
-    weight_decay: 0
+    weight_decay: 0.000001 #0
     weight_loss: True
     grid_variables:
       - class_hidden_dim
@@ -271,7 +271,7 @@ runs:
     blackbox_model_config:
       name: resnet18
       imagenet_pretrained: True
-      add_linear_layers: [85]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
+      add_linear_layers: [19]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
     blackbox_training_epochs: 50
     max_residual_epochs: 50
     max_epochs: 50
@@ -297,7 +297,7 @@ runs:
     blackbox_model_config:
       name: resnet18
       imagenet_pretrained: True
-      add_linear_layers: [85]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
+      add_linear_layers: [19]  # Add an intermediate layer with the same size as the number of concepts so that the evaluation is fair
     blackbox_training_epochs: 50
     max_residual_epochs: 50
     max_epochs: 50
@@ -317,7 +317,7 @@ runs:
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0, 1, 50]
+    montecarlo_test_tries: [0] #, 1, 50]
     ood_dropout_prob: [0.1, 0.5]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
@@ -327,11 +327,11 @@ runs:
     global_epochs: [0]
     global_mixed_probs_coeff: 0
     freeze_global_embeddings: False
-    max_epochs: 150
+    max_epochs: 50 # 150
     uncerainty_threshold_percentile: [null]
     inference_threshold: False
     mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [1, 0.1]
+    all_intervened_loss_weight: [0.1, 1]
     calibrate_concept_probs: True
     dynamic_confidence_scaling: True
     temperature: [1]
