--- a/experiments/configs/mixcem_cifar10_zero_shot.yaml
+++ b/experiments/configs/mixcem_cifar10_zero_shot.yaml
@@ -1,6 +1,6 @@
 trials: 3
 model_selection_trials: 1
-results_dir: /anfs/bigdisc/me466/mixcem_results/cifar10/
+results_dir: /anfs/bigdisc/me466/mixcem_results/cifar10_zero_shot/
 
 num_load_workers: 0
 
@@ -14,12 +14,8 @@ model_selection_groups:
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
   - ["^(PCBM_).*$", "Posthoc CBM (Baseline)"]
   - ["^(HybridPCBM_).*$", "Posthoc Hybrid CBM (Baseline)"]
-  - ["^(Entropy_CMCMixIntCEM).*(_ce_0_).*$", "Entropy CMCMixIntCEM No Calibration (Baseline)"]
-  - ["^(Entropy_CMCMixIntCEM).*(_ce_30_).*$", "Entropy CMCMixIntCEM (Baseline)"]
-  - ["^(Entropy_CMCMixCEM).*(_ce_0_).*$", "Entropy CMCMixCEM No Calibration (Baseline)"]
-  - ["^(Entropy_CMCMixCEM).*(_ce_30_).*$", "Entropy CMCMixCEM (Baseline)"]
-  - ["^(MaxEntropy_CMCMixCEM).*(_ce_30_).*$", "MaxEntropy CMCMixCEM (Baseline)"]
-  - ["^(MeanEntropy_CMCMixCEM).*(_ce_30_).*$", "MeanEntropy CMCMixCEM (Baseline)"]
+  - ["^(Entropy_CMCMixIntCEM).*(r_1_).*(_ce_0_).*((g_ood_0.1_)|(g_ood_0.5_)).*$", "Entropy CMCMixIntCEM No Calibration (Baseline)"]
+  - ["^(Entropy_CMCMixIntCEM).*(r_1_).*(_ce_30_).*((g_ood_0.1_)|(g_ood_0.5_)).*$", "Entropy CMCMixIntCEM (Baseline)"]
   - ["^(ConceptToLabelModel).*$", "Bayes MLP (Baseline)"]
 
 model_selection_metrics:
@@ -32,10 +28,8 @@ shared_params:
     dataset: "cifar10"
     num_workers: 8
     batch_size: 512
-
-    binarization_mode: percentile_threshold #zero_shot
+    binarization_mode: zero_shot
     regenerate: True
-    threshold: 50
 
     # DATASET VARIABLES
     root_dir: /anfs/bigdisc/me466/cifar10
@@ -48,7 +42,7 @@ shared_params:
   intervention_config:
     competence_levels: [1]
     intervention_freq: 11
-    intervention_batch_size: 512 #1024 #8192 #4096
+    intervention_batch_size: 1024 #8192 #4096
     val_intervention_policies:
       - policy: "random"
         group_level: True
@@ -111,6 +105,7 @@ runs:
   - architecture: 'ConceptEmbeddingModel'
     run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
     sigmoidal_prob: True
+    concept_loss_weight: [5, 1]
     training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
 
@@ -239,8 +234,8 @@ runs:
     hidden_dim: [16, 32]
     class_hidden_dim: [64, 128]
     intervention_prob: 0.5
-    gradient_clip_val: 2.0
-    max_concept_epochs: [50] #20
+    # gradient_clip_val: 2.0
+    max_concept_epochs: 50 #20
     warmup_epochs: 20 #5
     max_task_epochs: 50 #30
     vib_beta: 0.00005
@@ -252,49 +247,6 @@ runs:
     grid_variables:
       - class_hidden_dim
       - hidden_dim
-      - max_concept_epochs
-    grid_search_mode: exhaustive
-
-  - architecture: 'ProbabilisticConceptBottleneckModel'
-    run_name: "ProbCBM_lr_{learning_rate}_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_n_samples_inference_{n_samples_inference}_max_concept_epochs_{max_concept_epochs}_max_task_epochs_{max_task_epochs}"
-    n_samples_inference: 50
-    use_neg_concept: True
-    pred_class: True
-    init_negative_scale: 5
-    init_shift: 5
-    pretrained: True
-    hidden_dim: [16, 32]
-    class_hidden_dim: [64, 128]
-    intervention_prob: 0.5
-    gradient_clip_val: 2.0
-    max_concept_epochs: [50, 100] #20
-    warmup_epochs: 20 #5
-    max_task_epochs: 50 #30
-    vib_beta: 0.00005
-    concept_loss_weight: 1
-    learning_rate: 0.01
-    lr_ratio: 10
-    weight_decay: 0.000001 #0
-    weight_loss: True
-    dataset_config:
-      dataset: "cifar10"
-      num_workers: 8
-      batch_size: 128 # 512 # LOWERING CAUSE IT DOESN'T FIT IN THE GPU!
-
-      binarization_mode: percentile_threshold #zero_shot
-      regenerate: True
-      threshold: 50
-
-      # DATASET VARIABLES
-      root_dir: /anfs/bigdisc/me466/cifar10
-      sampling_percent: 1
-      sampling_groups: True
-      test_subsampling: 1
-      weight_loss: True
-    grid_variables:
-      - class_hidden_dim
-      - hidden_dim
-      - max_concept_epochs
     grid_search_mode: exhaustive
 
   - architecture: "IntAwareConceptEmbeddingModel"
@@ -309,7 +261,7 @@ runs:
     max_horizon: 6
     horizon_rate: 1.005
     gradient_clip_val: 100
-    emb_size: [16] #, 32]
+    emb_size: [16, 32]
     grid_variables:
         - concept_loss_weight
         - intervention_task_discount
@@ -410,194 +362,6 @@ runs:
     max_horizon: 6
     horizon_rate: 1.005
     intervention_weight: [0.1]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
-
-  - architecture: 'MCIntCEM'
-    run_name: "Entropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "Entropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-    concept_loss_weight: [10, 1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0] #, 1, 50]
-    ood_dropout_prob: [0.1, 0.5]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 50 # 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1, 10]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: entropy
-
-    ###############################################################################################
-
-    # IntCEM stuff
-    gradient_clip_val: 100
-    embedding_activation: null
-    training_intervention_prob: [0.25, 0.5, 0.75]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
-
-
-
-
-
-
-
-
-
-  - architecture: 'MCIntCEM'
-    run_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-    concept_loss_weight: [10, 1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]
-    ood_dropout_prob: [0.5, 0.1]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 50 # 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: mean_entropy
-
-    ###############################################################################################
-
-    # IntCEM stuff
-    gradient_clip_val: 100
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
-
-  - architecture: 'MCIntCEM'
-    run_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-    concept_loss_weight: [10, 1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]
-    ood_dropout_prob: [0.5, 0.1]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 50 # 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: max_entropy
-
-    ###############################################################################################
-
-    # IntCEM stuff
-    gradient_clip_val: 100
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
     grid_variables:
       - training_intervention_prob
       - intervention_task_discount
