--- a/experiments/configs/mixcem_cifar10.yaml
+++ b/experiments/configs/mixcem_cifar10.yaml
@@ -336,7 +336,10 @@ runs:
     blackbox_training_epochs: 50
     max_residual_epochs: 50
     max_epochs: 50
-    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_fold_{split}_layers_{blackbox_model_config[add_linear_layers]}'
+    # We use the same blackbox model and CAVs for all folds as otherwise things get too computationally expensive (and the assumption here is we are given always a pre-trained model)
+    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}'
+    cav_path: '{results_dir}/PCBM_CAVs_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}.npy'
+    intercept_path: '{results_dir}/PCBM_Intercepts_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}.npy'
 
 
     grid_variables:
@@ -362,7 +365,10 @@ runs:
     blackbox_training_epochs: 50
     max_residual_epochs: 50
     max_epochs: 50
-    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_fold_{split}_layers_{blackbox_model_config[add_linear_layers]}'
+    # We use the same blackbox model and CAVs for all folds as otherwise things get too computationally expensive (and the assumption here is we are given always a pre-trained model)
+    blackbox_path: 'PCBM_BlackBox_Model_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}'
+    cav_path: '{results_dir}/PCBM_CAVs_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}.npy'
+    intercept_path: '{results_dir}/PCBM_Intercepts_{blackbox_model_config[name]}_pre_{blackbox_model_config[imagenet_pretrained]}_layers_{blackbox_model_config[add_linear_layers]}.npy'
 
     grid_variables:
       - reg_strength
@@ -429,6 +435,7 @@ runs:
       - uncerainty_threshold_percentile
     grid_search_mode: exhaustive
 
+
   - architecture: 'MCIntCEM'
     run_name: "Entropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     load_path_name: "Entropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
@@ -451,7 +458,7 @@ runs:
     uncerainty_threshold_percentile: [null]
     inference_threshold: False
     mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1, 10]
+    all_intervened_loss_weight: [0.1, 1, 10, 100]
     calibrate_concept_probs: True
     dynamic_confidence_scaling: True
     temperature: [1]
@@ -462,7 +469,7 @@ runs:
     # IntCEM stuff
     gradient_clip_val: 100
     embedding_activation: null
-    training_intervention_prob: [0.25, 0.5, 0.75]
+    training_intervention_prob: [0.25] #, 0.5, 0.75]
     intervention_task_discount: [1]
     use_concept_groups: True
     int_model_use_bn: False
@@ -497,122 +504,122 @@ runs:
 
 
 
-  - architecture: 'MCIntCEM'
-    run_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  # - architecture: 'MCIntCEM'
+  #   run_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   load_path_name: "MeanEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [10, 1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]
-    ood_dropout_prob: [0.5, 0.1]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 50 # 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: mean_entropy
+  #   concept_loss_weight: [10, 1]
+  #   emb_size: [16]
+  #   shared_emb_generator: True
+  #   montecarlo_train_tries: [1]
+  #   montecarlo_test_tries: [0]
+  #   ood_dropout_prob: [0.5, 0.1]
+  #   pooling_mode: ['concat']
+  #   calibration_epochs: [0, 30]
+  #   finetune_with_val: [True]
+  #   learnable_temps: False
+  #   class_wise_temperature: False
+  #   global_epochs: [0]
+  #   global_mixed_probs_coeff: 0
+  #   freeze_global_embeddings: False
+  #   max_epochs: 50 # 150
+  #   uncerainty_threshold_percentile: [null]
+  #   inference_threshold: False
+  #   mixed_probs_coeff: [1]
+  #   all_intervened_loss_weight: [0.1, 1]
+  #   calibrate_concept_probs: True
+  #   dynamic_confidence_scaling: True
+  #   temperature: [1]
+  #   scale_fn: mean_entropy
 
-    ###############################################################################################
+  #   ###############################################################################################
 
-    # IntCEM stuff
-    gradient_clip_val: 100
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
+  #   # IntCEM stuff
+  #   gradient_clip_val: 100
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: False
+  #   int_model_layers: []
+  #   max_horizon: 1
+  #   horizon_rate: 1
+  #   intervention_weight: [0]
+  #   grid_variables:
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - ood_dropout_prob
+  #     - emb_size
+  #     - finetune_with_val
+  #     - concept_loss_weight
+  #     - pooling_mode
+  #     - intervention_weight
+  #     - global_epochs
+  #     - montecarlo_train_tries
+  #     - montecarlo_test_tries
+  #     - mixed_probs_coeff
+  #     - all_intervened_loss_weight
+  #     - temperature
+  #     - calibration_epochs
+  #     - uncerainty_threshold_percentile
+  #   grid_search_mode: exhaustive
 
-  - architecture: 'MCIntCEM'
-    run_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  # - architecture: 'MCIntCEM'
+  #   run_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   load_path_name: "MaxEntropy_CMCMixCEM_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_1_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [10, 1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]
-    ood_dropout_prob: [0.5, 0.1]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 50 # 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [0.1, 1]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: max_entropy
+  #   concept_loss_weight: [10, 1]
+  #   emb_size: [16]
+  #   shared_emb_generator: True
+  #   montecarlo_train_tries: [1]
+  #   montecarlo_test_tries: [0]
+  #   ood_dropout_prob: [0.5, 0.1]
+  #   pooling_mode: ['concat']
+  #   calibration_epochs: [0, 30]
+  #   finetune_with_val: [True]
+  #   learnable_temps: False
+  #   class_wise_temperature: False
+  #   global_epochs: [0]
+  #   global_mixed_probs_coeff: 0
+  #   freeze_global_embeddings: False
+  #   max_epochs: 50 # 150
+  #   uncerainty_threshold_percentile: [null]
+  #   inference_threshold: False
+  #   mixed_probs_coeff: [1]
+  #   all_intervened_loss_weight: [0.1, 1]
+  #   calibrate_concept_probs: True
+  #   dynamic_confidence_scaling: True
+  #   temperature: [1]
+  #   scale_fn: max_entropy
 
-    ###############################################################################################
+  #   ###############################################################################################
 
-    # IntCEM stuff
-    gradient_clip_val: 100
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - montecarlo_test_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-    grid_search_mode: exhaustive
+  #   # IntCEM stuff
+  #   gradient_clip_val: 100
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: False
+  #   int_model_layers: []
+  #   max_horizon: 1
+  #   horizon_rate: 1
+  #   intervention_weight: [0]
+  #   grid_variables:
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - ood_dropout_prob
+  #     - emb_size
+  #     - finetune_with_val
+  #     - concept_loss_weight
+  #     - pooling_mode
+  #     - intervention_weight
+  #     - global_epochs
+  #     - montecarlo_train_tries
+  #     - montecarlo_test_tries
+  #     - mixed_probs_coeff
+  #     - all_intervened_loss_weight
+  #     - temperature
+  #     - calibration_epochs
+  #     - uncerainty_threshold_percentile
+  #   grid_search_mode: exhaustive
