Updating all configs with the MixCEM hypers after model selection.

--- a/experiments/configs/mixcem_awa2.yaml
+++ b/experiments/configs/mixcem_awa2.yaml
@@ -37,10 +37,12 @@ model_selection_groups:
 
   - [".*(MixCEM_Final).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
   - [".*(MixCEM_Final)_.*(_ce_30_).*$", "MixCEM Final (Baseline)"]
+  - [".*(MixCEM_Final)_.*$", "MixCEM Final All (Baseline)"]
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
   - val_acc_y
+  - val_mixcem_sel_acc
 
 shared_params:
   # Dataset Configuration
@@ -109,6 +111,7 @@ shared_params:
     additional_test_sets:
       - name: "OOD"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             name: random_noise
@@ -126,6 +129,7 @@ shared_params:
 
       - name: "OOD_sap_0.05"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
          test_transformation_config:
            post_generation: False
@@ -144,6 +148,7 @@ shared_params:
 
       - name: "OOD_sap_0.25"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -153,6 +158,7 @@ shared_params:
 
       - name: "OOD_sap_0.5"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -162,6 +168,7 @@ shared_params:
 
       - name: "OOD_sap_0.75"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -171,6 +178,7 @@ shared_params:
 
       - name: "OOD_sap_0.9"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -180,6 +188,7 @@ shared_params:
 
       - name: "OOD_sap_0.99"
         update_previous: True
+        skip_list: [".*(MixCEM_Final).*"]
         dataset_config:
           test_transformation_config:
             post_generation: False
@@ -483,15 +492,15 @@ runs:
   # Entropy CMCMixCEM (Baseline): Entropy_CMCMixCEM_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.5_emb_16_True_tip_0.25_itd_1_iw_0_cwl_1
   - architecture: 'MCIntCEM'
     run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_0_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    global_model_path: "g_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_0_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    global_model_path: "g_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
     concept_loss_weight: [1]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]  # No MC Sampling
-    ood_dropout_prob: [0.5]
+    montecarlo_test_tries: [0]
+    ood_dropout_prob: [0.5, 0.9]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
     finetune_with_val: [True]
@@ -533,12 +542,72 @@ runs:
       - intervention_weight
       - global_epochs
       - montecarlo_train_tries
-      - montecarlo_test_tries
       - mixed_probs_coeff
       - all_intervened_loss_weight
       - temperature
       - calibration_epochs
       - uncerainty_threshold_percentile
+      - montecarlo_test_tries
+    grid_search_mode: exhaustive
+
+
+  - architecture: 'MCIntCEM'
+    run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [1, 50]
+    ood_dropout_prob: [0.5, 0.9]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 150
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1]
+    use_concept_groups: True
+    int_model_use_bn: False
+    int_model_layers: []
+    max_horizon: 1
+    horizon_rate: 1
+    intervention_weight: [0]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+      - montecarlo_test_tries
     grid_search_mode: exhaustive
 
 
