--- a/experiments/configs/mixcem_celeba.yaml
+++ b/experiments/configs/mixcem_celeba.yaml
@@ -1,5 +1,5 @@
 trials: 3
-model_selection_trials: 2
+model_selection_trials: 1 #2
 
 results_dir: /anfs/bigdisc/me466/mixcem_results/celeba/
 model_selection_groups:
@@ -30,6 +30,7 @@ model_selection_groups:
   - ["^(Entropy_CMCMixCEM)_.*(_ce_30_).*$", "Entropy CMCMixCEM Ablation (Baseline)"]
   - [".*(MixCEM_Final).*(_ce_0_).*$", "MixCEM Final No Calibration (Baseline)"]
   - [".*(MixCEM_Final)_.*(_ce_30_).*$", "MixCEM Final (Baseline)"]
+  - [".*(MixCEM_Final)_.*$", "MixCEM Final All (Baseline)"]
 
   - ["^(Entropy_CMCMixIntCEM).*(r_0_).*(_ce_0_).*$", "Entropy CMCMixIntCEM (r=0) No Calibration (Baseline)"]
   - ["^(Entropy_CMCMixIntCEM).*(r_0_).*(_ce_30_).*$", "Entropy CMCMixIntCEM (r=0) (Baseline)"]
@@ -86,7 +87,7 @@ shared_params:
 
   # top_k_accuracy: [3, 5, 10]
   save_model: True
-  max_epochs: 200
+  max_epochs: 150
   lr_scheduler_patience: 10
   patience: 5
   emb_size: 16
@@ -692,17 +693,143 @@ runs:
       - uncerainty_threshold_percentile
     grid_search_mode: exhaustive
 
-  - architecture: 'MCIntCEM'
-    run_name: "MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    global_model_path: "g_MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  # - architecture: 'MCIntCEM'
+  #   run_name: "MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   load_path_name: "MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   global_model_path: "g_MixCEM_Final_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [1]
+  #   concept_loss_weight: [1, 10]
+  #   emb_size: [16]
+  #   shared_emb_generator: True
+  #   montecarlo_train_tries: [1]
+  #   montecarlo_test_tries: [0]  # No MC Sampling during testing. Instead, we scale them as dropout probs
+  #   ood_dropout_prob: [0.5, 0.1, 0.75]
+  #   pooling_mode: ['concat']
+  #   calibration_epochs: [0, 30]
+  #   finetune_with_val: [True]
+  #   learnable_temps: False
+  #   class_wise_temperature: False
+  #   global_epochs: [0]
+  #   global_mixed_probs_coeff: 0
+  #   freeze_global_embeddings: False
+  #   max_epochs: 150
+  #   uncerainty_threshold_percentile: [null]
+  #   inference_threshold: False
+  #   mixed_probs_coeff: [1]
+  #   all_intervened_loss_weight: [1, 0.1, 10, 100] #, 50]
+  #   calibrate_concept_probs: True
+  #   dynamic_confidence_scaling: True
+  #   temperature: [1]
+  #   scale_fn: entropy
+
+  #   ###############################################################################################
+
+  #   # IntCEM stuff
+  #   #gradient_clip_val: 100 # Keeping it in case this is the culprit!
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: False
+  #   int_model_layers: []
+  #   max_horizon: 1
+  #   horizon_rate: 1
+  #   intervention_weight: [0]
+  #   grid_variables:
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - ood_dropout_prob
+  #     - emb_size
+  #     - finetune_with_val
+  #     - concept_loss_weight
+  #     - pooling_mode
+  #     - intervention_weight
+  #     - global_epochs
+  #     - montecarlo_train_tries
+  #     - montecarlo_test_tries
+  #     - mixed_probs_coeff
+  #     - all_intervened_loss_weight
+  #     - temperature
+  #     - calibration_epochs
+  #     - uncerainty_threshold_percentile
+  #   grid_search_mode: exhaustive
+
+
+  # # - architecture: 'MCIntCEM'
+  # #   run_name: "MixCEM_Final_long_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  # #   load_path_name: "MixCEM_Final_long_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  # #   global_model_path: "g_MixCEM_Final_long_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+  # #   concept_loss_weight: [1, 10]
+  # #   emb_size: [16]
+  # #   shared_emb_generator: True
+  # #   montecarlo_train_tries: [1]
+  # #   montecarlo_test_tries: [0]  # No MC Sampling during testing. Instead, we scale them as dropout probs
+  # #   ood_dropout_prob: [0.5]
+  # #   pooling_mode: ['concat']
+  # #   calibration_epochs: [0, 30]
+  # #   finetune_with_val: [True]
+  # #   learnable_temps: False
+  # #   class_wise_temperature: False
+  # #   global_epochs: [0]
+  # #   global_mixed_probs_coeff: 0
+  # #   freeze_global_embeddings: False
+  # #   max_epochs: 150
+  # #   uncerainty_threshold_percentile: [null]
+  # #   inference_threshold: False
+  # #   mixed_probs_coeff: [1]
+  # #   all_intervened_loss_weight: [10, 1, 0.01] #, 50]
+  # #   calibrate_concept_probs: True
+  # #   dynamic_confidence_scaling: True
+  # #   temperature: [1]
+  # #   scale_fn: entropy
+  # #   lr_scheduler_patience: 10 #
+  # #   patience: 15 # CHANGE!!!!!!!!!!!!!!! BEFORE 5
+
+  # #   ###############################################################################################
+
+  # #   # IntCEM stuff
+  # #   #gradient_clip_val: 100 # Keeping it in case this is the culprit!
+  # #   embedding_activation: null
+  # #   training_intervention_prob: [0.25]
+  # #   intervention_task_discount: [1]
+  # #   use_concept_groups: True
+  # #   int_model_use_bn: False
+  # #   int_model_layers: []
+  # #   max_horizon: 1
+  # #   horizon_rate: 1
+  # #   intervention_weight: [0]
+  # #   grid_variables:
+  # #     - training_intervention_prob
+  # #     - intervention_task_discount
+  # #     - ood_dropout_prob
+  # #     - emb_size
+  # #     - finetune_with_val
+  # #     - concept_loss_weight
+  # #     - pooling_mode
+  # #     - intervention_weight
+  # #     - global_epochs
+  # #     - montecarlo_train_tries
+  # #     - montecarlo_test_tries
+  # #     - mixed_probs_coeff
+  # #     - all_intervened_loss_weight
+  # #     - temperature
+  # #     - calibration_epochs
+  # #     - uncerainty_threshold_percentile
+  # #   grid_search_mode: exhaustive
+
+
+
+  - architecture: 'MCIntCEM'
+    run_name: "MixCEM_Final_derp_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_derp_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [10]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [0]  # No MC Sampling during testing. Instead, we scale them as dropout probs
-    ood_dropout_prob: [0.5, 0.1]
+    montecarlo_test_tries: [0]
+    ood_dropout_prob: [0.5, 0.9, 0.1]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
     finetune_with_val: [True]
@@ -715,16 +842,18 @@ runs:
     uncerainty_threshold_percentile: [null]
     inference_threshold: False
     mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [1, 0.1, 10] #, 50]
+    all_intervened_loss_weight: [10, 1]
     calibrate_concept_probs: True
     dynamic_confidence_scaling: True
     temperature: [1]
     scale_fn: entropy
+    # lr_scheduler_patience: 10 #
+    # patience: 15 # CHANGE!!!!!!!!!!!!!!! BEFORE 5
 
     ###############################################################################################
 
     # IntCEM stuff
-    #gradient_clip_val: 100 # Keeping it in case this is the culprit!
+    # gradient_clip_val: 100 # Keeping it in case this is the culprit!
     embedding_activation: null
     training_intervention_prob: [0.25]
     intervention_task_discount: [1]
@@ -745,14 +874,76 @@ runs:
       - intervention_weight
       - global_epochs
       - montecarlo_train_tries
-      - montecarlo_test_tries
       - mixed_probs_coeff
       - all_intervened_loss_weight
       - temperature
       - calibration_epochs
       - uncerainty_threshold_percentile
+      - montecarlo_test_tries
     grid_search_mode: exhaustive
 
+
+  - architecture: 'MCIntCEM'
+    run_name: "MixCEM_Final_derp_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "MixCEM_Final_derp_t_{temperature}_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [10]
+    emb_size: [16]
+    shared_emb_generator: True
+    montecarlo_train_tries: [1]
+    montecarlo_test_tries: [1, 50]
+    ood_dropout_prob: [0.5, 0.9, 0.1]
+    pooling_mode: ['concat']
+    calibration_epochs: [0, 30]
+    finetune_with_val: [True]
+    learnable_temps: False
+    class_wise_temperature: False
+    global_epochs: [0]
+    global_mixed_probs_coeff: 0
+    freeze_global_embeddings: False
+    max_epochs: 150
+    uncerainty_threshold_percentile: [null]
+    inference_threshold: False
+    mixed_probs_coeff: [1]
+    all_intervened_loss_weight: [10, 1]
+    calibrate_concept_probs: True
+    dynamic_confidence_scaling: True
+    temperature: [1]
+    scale_fn: entropy
+    # lr_scheduler_patience: 10 #
+    # patience: 15 # CHANGE!!!!!!!!!!!!!!! BEFORE 5
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    # gradient_clip_val: 100 # Keeping it in case this is the culprit!
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1]
+    use_concept_groups: True
+    int_model_use_bn: False
+    int_model_layers: []
+    max_horizon: 1
+    horizon_rate: 1
+    intervention_weight: [0]
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - ood_dropout_prob
+      - emb_size
+      - finetune_with_val
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - global_epochs
+      - montecarlo_train_tries
+      - mixed_probs_coeff
+      - all_intervened_loss_weight
+      - temperature
+      - calibration_epochs
+      - uncerainty_threshold_percentile
+      - montecarlo_test_tries
+    grid_search_mode: exhaustive
 
 
   # Uncomment ablation below if that's what we want
