--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -556,7 +556,7 @@ runs:
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [1, 50]
+    montecarlo_test_tries: [50] #[1, 50]
     ood_dropout_prob: [0.5, 0.9]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
