--- a/experiments/configs/mixcem_cifar10.yaml
+++ b/experiments/configs/mixcem_cifar10.yaml
@@ -6,9 +6,11 @@ num_load_workers: 0
 
 model_selection_groups:
   - ["^(DNN).*$", "DNN (Baseline)"]
-  - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
-  - ["^(CBM_Logit_Baseline_).*$", "Joint Logit CBM (Baseline)"]
-  - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
+  - ["^(CBM_Sigmoid_).*$", "Joint CBM (Baseline)"]
+  - ["^(CBM_Logit_).*$", "Joint Logit CBM (Baseline)"]
+  - ["^(CBM_Seq).*$", "Sequential CBM (Baseline)"]
+  - ["^(CBM_Ind).*$", "Independent CBM (Baseline)"]
+  - ["^(Hybrid-CBM_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
@@ -577,7 +579,7 @@ runs:
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
-    montecarlo_test_tries: [1, 50]  # No MC Sampling
+    montecarlo_test_tries: [50] #[1, 50]  # MC Sampling
     ood_dropout_prob: [0.5, 0.9]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
