--- a/experiments/configs/mixcem_awa2_incomplete.yaml
+++ b/experiments/configs/mixcem_awa2_incomplete.yaml
@@ -489,19 +489,140 @@ runs:
 
 
 
-  # Final version to make sure everything works as expected (including the change in using MC sampling at test time)
-  # Entropy CMCMixCEM (Baseline): Entropy_CMCMixCEM_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.5_emb_16_True_tip_0.25_itd_1_iw_0_cwl_1
+  # # Final version to make sure everything works as expected (including the change in using MC sampling at test time)
+  # # Entropy CMCMixCEM (Baseline): Entropy_CMCMixCEM_t_1_r_1_concat_None_0_mpc_1_tmc_1_emc_50_cwc_False_ce_30_g_ood_0.5_emb_16_True_tip_0.25_itd_1_iw_0_cwl_1
+  # - architecture: 'MCIntCEM'
+  #   run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   global_model_path: "g_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+  #   concept_loss_weight: [1]
+  #   emb_size: [16]
+  #   shared_emb_generator: True
+  #   montecarlo_train_tries: [1]
+  #   montecarlo_test_tries: [0]  # No MC Sampling
+  #   ood_dropout_prob: [0.5, 0.9]
+  #   pooling_mode: ['concat']
+  #   calibration_epochs: [0, 30]
+  #   finetune_with_val: [True]
+  #   learnable_temps: False
+  #   class_wise_temperature: False
+  #   global_epochs: [0]
+  #   global_mixed_probs_coeff: 0
+  #   freeze_global_embeddings: False
+  #   max_epochs: 150
+  #   uncerainty_threshold_percentile: [null]
+  #   inference_threshold: False
+  #   mixed_probs_coeff: [1]
+  #   all_intervened_loss_weight: [1]
+  #   calibrate_concept_probs: True
+  #   dynamic_confidence_scaling: True
+  #   temperature: [1]
+  #   scale_fn: entropy
+
+  #   ###############################################################################################
+
+  #   # IntCEM stuff
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: False
+  #   int_model_layers: []
+  #   max_horizon: 1
+  #   horizon_rate: 1
+  #   intervention_weight: [0]
+  #   grid_variables:
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - ood_dropout_prob
+  #     - emb_size
+  #     - finetune_with_val
+  #     - concept_loss_weight
+  #     - pooling_mode
+  #     - intervention_weight
+  #     - global_epochs
+  #     - montecarlo_train_tries
+  #     - mixed_probs_coeff
+  #     - all_intervened_loss_weight
+  #     - temperature
+  #     - calibration_epochs
+  #     - uncerainty_threshold_percentile
+  #     - montecarlo_test_tries
+  #   grid_search_mode: exhaustive
+
+
+  # - architecture: 'MCIntCEM'
+  #   run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+  #   load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+  #   concept_loss_weight: [1]
+  #   emb_size: [16]
+  #   shared_emb_generator: True
+  #   montecarlo_train_tries: [1]
+  #   montecarlo_test_tries: [50] #[1, 50]  # MC Sampling
+  #   ood_dropout_prob: [0.5, 0.9]
+  #   pooling_mode: ['concat']
+  #   calibration_epochs: [0, 30]
+  #   finetune_with_val: [True]
+  #   learnable_temps: False
+  #   class_wise_temperature: False
+  #   global_epochs: [0]
+  #   global_mixed_probs_coeff: 0
+  #   freeze_global_embeddings: False
+  #   max_epochs: 150
+  #   uncerainty_threshold_percentile: [null]
+  #   inference_threshold: False
+  #   mixed_probs_coeff: [1]
+  #   all_intervened_loss_weight: [1]
+  #   calibrate_concept_probs: True
+  #   dynamic_confidence_scaling: True
+  #   temperature: [1]
+  #   scale_fn: entropy
+
+  #   ###############################################################################################
+
+  #   # IntCEM stuff
+  #   embedding_activation: null
+  #   training_intervention_prob: [0.25]
+  #   intervention_task_discount: [1]
+  #   use_concept_groups: True
+  #   int_model_use_bn: False
+  #   int_model_layers: []
+  #   max_horizon: 1
+  #   horizon_rate: 1
+  #   intervention_weight: [0]
+  #   grid_variables:
+  #     - training_intervention_prob
+  #     - intervention_task_discount
+  #     - ood_dropout_prob
+  #     - emb_size
+  #     - finetune_with_val
+  #     - concept_loss_weight
+  #     - pooling_mode
+  #     - intervention_weight
+  #     - global_epochs
+  #     - montecarlo_train_tries
+  #     - mixed_probs_coeff
+  #     - all_intervened_loss_weight
+  #     - temperature
+  #     - calibration_epochs
+  #     - uncerainty_threshold_percentile
+  #     - montecarlo_test_tries
+  #   grid_search_mode: exhaustive
+
+
   - architecture: 'MCIntCEM'
     run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
     global_model_path: "g_MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
 
-    concept_loss_weight: [1]
+    concept_loss_weight: [5]
     emb_size: [16]
     shared_emb_generator: True
     montecarlo_train_tries: [1]
     montecarlo_test_tries: [0]  # No MC Sampling
-    ood_dropout_prob: [0.5, 0.9]
+    ood_dropout_prob: [0.5]
     pooling_mode: ['concat']
     calibration_epochs: [0, 30]
     finetune_with_val: [True]
@@ -550,192 +671,6 @@ runs:
       - uncerainty_threshold_percentile
       - montecarlo_test_tries
     grid_search_mode: exhaustive
-
-
-  - architecture: 'MCIntCEM'
-    run_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-    load_path_name: "MixCEM_Final_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-    concept_loss_weight: [1]
-    emb_size: [16]
-    shared_emb_generator: True
-    montecarlo_train_tries: [1]
-    montecarlo_test_tries: [50] #[1, 50]  # MC Sampling
-    ood_dropout_prob: [0.5, 0.9]
-    pooling_mode: ['concat']
-    calibration_epochs: [0, 30]
-    finetune_with_val: [True]
-    learnable_temps: False
-    class_wise_temperature: False
-    global_epochs: [0]
-    global_mixed_probs_coeff: 0
-    freeze_global_embeddings: False
-    max_epochs: 150
-    uncerainty_threshold_percentile: [null]
-    inference_threshold: False
-    mixed_probs_coeff: [1]
-    all_intervened_loss_weight: [1]
-    calibrate_concept_probs: True
-    dynamic_confidence_scaling: True
-    temperature: [1]
-    scale_fn: entropy
-
-    ###############################################################################################
-
-    # IntCEM stuff
-    embedding_activation: null
-    training_intervention_prob: [0.25]
-    intervention_task_discount: [1]
-    use_concept_groups: True
-    int_model_use_bn: False
-    int_model_layers: []
-    max_horizon: 1
-    horizon_rate: 1
-    intervention_weight: [0]
-    grid_variables:
-      - training_intervention_prob
-      - intervention_task_discount
-      - ood_dropout_prob
-      - emb_size
-      - finetune_with_val
-      - concept_loss_weight
-      - pooling_mode
-      - intervention_weight
-      - global_epochs
-      - montecarlo_train_tries
-      - mixed_probs_coeff
-      - all_intervened_loss_weight
-      - temperature
-      - calibration_epochs
-      - uncerainty_threshold_percentile
-      - montecarlo_test_tries
-    grid_search_mode: exhaustive
-
-
-
-
-  # - architecture: 'MCIntCEM'
-  #   run_name: "Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-  #   load_path_name: "Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-  #   global_model_path: "g_Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-  #   patience: 5 # CHANGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-  #   concept_loss_weight: [5]
-  #   emb_size: [16]
-  #   shared_emb_generator: True
-  #   montecarlo_train_tries: [1]
-  #   montecarlo_test_tries: [0]
-  #   ood_dropout_prob: [0.1] #0.1, 0.5]
-  #   pooling_mode: ['concat']
-  #   calibration_epochs: [0, 30]
-  #   finetune_with_val: [True]
-  #   learnable_temps: False
-  #   class_wise_temperature: False
-  #   global_epochs: [0]
-  #   global_mixed_probs_coeff: 0
-  #   freeze_global_embeddings: False
-  #   max_epochs: 150
-  #   uncerainty_threshold_percentile: [null]
-  #   inference_threshold: False
-  #   mixed_probs_coeff: [1]
-  #   all_intervened_loss_weight: [0.1] #, 10, 0.1]
-  #   calibrate_concept_probs: True
-  #   dynamic_confidence_scaling: True
-  #   temperature: [1]
-  #   scale_fn: entropy
-  #   ignore_task_acc_in_calibration: False
-
-  #   ###############################################################################################
-
-  #   # IntCEM stuff
-  #   embedding_activation: null
-  #   training_intervention_prob: [0.25]
-  #   intervention_task_discount: [1]
-  #   use_concept_groups: True
-  #   int_model_use_bn: False
-  #   int_model_layers: []
-  #   max_horizon: 1
-  #   horizon_rate: 1
-  #   intervention_weight: [0]
-  #   grid_variables:
-  #     - training_intervention_prob
-  #     - intervention_task_discount
-  #     - ood_dropout_prob
-  #     - emb_size
-  #     - finetune_with_val
-  #     - concept_loss_weight
-  #     - pooling_mode
-  #     - intervention_weight
-  #     - global_epochs
-  #     - montecarlo_train_tries
-  #     - montecarlo_test_tries
-  #     - mixed_probs_coeff
-  #     - all_intervened_loss_weight
-  #     - temperature
-  #     - calibration_epochs
-  #     - uncerainty_threshold_percentile
-  #   grid_search_mode: exhaustive
-
-  # - architecture: 'MCIntCEM'
-  #   run_name: "Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_{montecarlo_test_tries}_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-  #   load_path_name: "Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_None_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_0_g_ood_{ood_dropout_prob}_emb_{emb_size}_True_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-  #   global_model_path: "g_Entropy_CMCMixCEM_new_t_{temperature}_r_{all_intervened_loss_weight}_{pooling_mode}_{uncerainty_threshold_percentile}_{global_epochs}_mpc_{mixed_probs_coeff}_tmc_{montecarlo_train_tries}_emc_0_cwc_{class_wise_temperature}_ce_{calibration_epochs}_g_ood_{ood_dropout_prob}_emb_{emb_size}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
-
-  #   concept_loss_weight: [5] #, 10]
-  #   emb_size: [16, 32]
-  #   shared_emb_generator: True
-  #   montecarlo_train_tries: [1]
-  #   montecarlo_test_tries: [0]
-  #   ood_dropout_prob: [0.5, 0.1] #0.1, 0.5]
-  #   pooling_mode: ['concat']
-  #   calibration_epochs: [0, 30]
-  #   finetune_with_val: [True]
-  #   learnable_temps: False
-  #   class_wise_temperature: False
-  #   global_epochs: [0]
-  #   global_mixed_probs_coeff: 0
-  #   freeze_global_embeddings: False
-  #   max_epochs: 150
-  #   uncerainty_threshold_percentile: [null]
-  #   inference_threshold: False
-  #   mixed_probs_coeff: [1]
-  #   all_intervened_loss_weight: [1] #, 0.1] #, 10, 0.1]
-  #   calibrate_concept_probs: True
-  #   dynamic_confidence_scaling: True
-  #   temperature: [1]
-  #   scale_fn: entropy
-  #   ignore_task_acc_in_calibration: False
-
-  #   ###############################################################################################
-
-  #   # IntCEM stuff
-  #   embedding_activation: null
-  #   training_intervention_prob: [0.25]
-  #   intervention_task_discount: [1]
-  #   use_concept_groups: True
-  #   int_model_use_bn: False
-  #   int_model_layers: []
-  #   max_horizon: 1
-  #   horizon_rate: 1
-  #   intervention_weight: [0]
-  #   grid_variables:
-  #     - training_intervention_prob
-  #     - intervention_task_discount
-  #     - ood_dropout_prob
-  #     - emb_size
-  #     - finetune_with_val
-  #     - concept_loss_weight
-  #     - pooling_mode
-  #     - intervention_weight
-  #     - global_epochs
-  #     - montecarlo_train_tries
-  #     - montecarlo_test_tries
-  #     - mixed_probs_coeff
-  #     - all_intervened_loss_weight
-  #     - temperature
-  #     - calibration_epochs
-  #     - uncerainty_threshold_percentile
-  #   grid_search_mode: exhaustive
 
   - architecture: 'ConceptToLabelModel'
     run_name: "ConceptToLabelModel"
