--- a/experiments/configs/mixcem_travelbirds_complete.yaml
+++ b/experiments/configs/mixcem_travelbirds_complete.yaml
@@ -447,12 +447,12 @@ runs:
       - svd_penalty
     grid_search_mode: exhaustive
 
-  - architecture: 'ConceptToLabelModel'
-    run_name: "ConceptToLabelModel"
-    c2y_layers: [128, 64, 32]
-    grid_variables: []
-    max_epochs: 75
-    feature_drop_out: 0.25
+  # - architecture: 'ConceptToLabelModel'
+  #   run_name: "ConceptToLabelModel"
+  #   c2y_layers: [128, 64, 32]
+  #   grid_variables: []
+  #   max_epochs: 75
+  #   feature_drop_out: 0.25
 
 
 
